--- a/app/index.html
+++ b/app/index.html
@@ -53,7 +53,9 @@
         </tfoot>
     </table>
 
-    <script src="js/Negociacao.js"></script>
+    <script src="js/models/Negociacao.js"></script>
+    <script src="js/controllers/NegociacaoController.js"></script>
+    <script src="js/app.js"></script>
 
 </body>
 </html>
